--- a/word-counter-app/style.css
+++ b/word-counter-app/style.css
@@ -39,3 +39,14 @@ body{
     font-size: 1.5rem;
     /*  */
 }
+
+#calculate{
+    background-color: azure;
+    border-radius: 10px;
+    padding: 1rem;
+    font-size: 1.3rem;
+    font-weight: 500;
+    width: 150px;
+    border: none;
+    margin-top: 1rem;
+}
